Adding Enemy Anims Adding Enemy BP Adding Enemy Lose Condition

--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,18 +127,18 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Maps/MainMenuLevel
-MRUItem1=/Game/Maps/FirstPersonExampleMap
-MRUItem2=/Game/Maps/GameOverScene
-MRUItem3=/Game/Maps/RomainScene
-MRUItem4=/Game/Maps/AI_Level
-MRUItem5=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem6=/Game/Maps/Maxence_Scene
-MRUItem7=/Game/Maps/AntoineScene
-MRUItem8=/Game/Maps/AntoineLVL
-MRUItem9=/Game/StarterContent/Maps/StarterMap
-MRUItem10=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem11=/Game/StarterContent/Maps/Minimal_Default
+MRUItem0=/Game/Maps/FirstPersonExampleMap
+MRUItem1=/Game/Maps/MainMenuLevel
+MRUItem2=/Game/Maps/GameScene
+MRUItem3=/Game/Maps/Game
+MRUItem4=/Game/Maps/RomainScene
+MRUItem5=/Game/Maps/GameOverScene
+MRUItem6=/Game/Maps/AI_Level
+MRUItem7=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem8=/Game/Maps/Maxence_Scene
+MRUItem9=/Game/Maps/AntoineScene
+MRUItem10=/Game/Maps/AntoineLVL
+MRUItem11=/Game/StarterContent/Maps/StarterMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -273,7 +273,7 @@ etagere_Blueprint_C=
 Void_Item_Blueprint_C=Void_Item_Blueprint_C.Physics.ConstraintsGroup,Void_Item_Blueprint_C.Rendering.RayTracing,Void_Item_Blueprint_C.Rendering.LOD,
 Non_Pickable_Item_Blueprint_C=Non_Pickable_Item_Blueprint_C.Physics.ConstraintsGroup,Non_Pickable_Item_Blueprint_C.Rendering.RayTracing,Non_Pickable_Item_Blueprint_C.Rendering.LOD,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Rendering.TextureStreaming,
-SceneComponent=StaticMeshActor.Collision.Collision,
+SceneComponent=
 PickableObject_2_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 EnemyAI_C=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 BTT_ChangeMoveSpeed_C=
@@ -285,6 +285,9 @@ Clock_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Renderi
 GameOverScreen_C=
 MainMenu_C=
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+BP_Sky_Sphere_C=StaticMeshActor.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
+Enemy_AnimBP_C=
+PickableObject_C=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
@@ -369,33 +372,35 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/MainMenuLevel
+LastLevel=/Game/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/AI/Anims/EnemyWalkBlend.EnemyWalkBlend
+OpenAssetsAtExit=/Game/AI/Anims/Enemy_AnimBP.Enemy_AnimBP
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/MainMenuLevel
-MRUItem1=/Game/FirstPersonBP/Blueprints/Clock
-MRUItem2=/Game/Maps/FirstPersonExampleMap
-MRUItem3=/Game/FirstPersonBP/UI/GameOver/MainMenu_PC
-MRUItem4=/Game/Maps/GameOverScene
-MRUItem5=/Game/FirstPersonBP/UI/MainMenu/MainMenuGameMode
-MRUItem6=/Game/FirstPersonBP/UI/MainMenu_PC
-MRUItem7=/Game/FirstPersonBP/UI/MainMenuGameMode
-MRUItem8=/Game/FirstPersonBP/UI/MainMenu
-MRUItem9=/Game/FirstPersonBP/GameOverScreen
-MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem11=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/3ColorBlend
-MRUItem12=/Game/Materials/Clock
-MRUItem13=/Game/FirstPersonBP/Blueprints/PickableObject_2
-MRUItem14=/Game/FirstPersonBP/Blueprints/TriggerBox_Blueprint
-MRUItem15=/Game/Maps/Maxence_Scene
-MRUItem16=/Game/Shelf/Void_Item_Blueprint
-MRUItem17=/Game/Shelf/Non_Pickable_Item_Blueprint
-MRUItem18=/Game/Shelf/Pickable_Item_Blueprint
-MRUItem19=/Game/Shelf/05_-_Default
+MRUItem0=/Game/Maps/FirstPersonExampleMap
+MRUItem1=/Game/Maps/MainMenuLevel
+MRUItem2=/Game/Maps/GameScene
+MRUItem3=/Game/Maps/Game
+MRUItem4=/Game/AI/Anims/Enemy_AnimBP
+MRUItem5=/Game/AI/Anims/EnemyWalkBlend
+MRUItem6=/Game/AI/Anims/idle_Anim
+MRUItem7=/Game/AI/EnemyAI
+MRUItem8=/Game/AI/Anims/Cop_Character
+MRUItem9=/Game/Maps/RomainScene
+MRUItem10=/Game/AI/Enemy_AnimBP
+MRUItem11=/Game/AI/Anims/walk_Anim
+MRUItem12=/Game/AI/BT_Enemy
+MRUItem13=/Game/AI/Anims/Cop_Character_Skeleton
+MRUItem14=/Game/Maps/GameOverScene
+MRUItem15=/Game/FirstPersonBP/Blueprints/Clock
+MRUItem16=/Game/FirstPersonBP/UI/GameOver/MainMenu_PC
+MRUItem17=/Game/FirstPersonBP/UI/MainMenu/MainMenuGameMode
+MRUItem18=/Game/FirstPersonBP/UI/MainMenu_PC
+MRUItem19=/Game/FirstPersonBP/UI/MainMenuGameMode
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -1565,6 +1570,24 @@ GameOverScene_C.Tick=True
 GameOverScene_C.Replication=True
 GameOverScene_C.Actor=True
 GameOverScene_C.Input=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.Animation=True
+SkeletalMesh.RayTracing=True
+SkeletalMesh.Sampling=True
+Enemy_AnimBP_C.RootMotion=True
+Enemy_AnimBP_C.Notifies=True
+Enemy_AnimBP_C.Default=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1573,7 +1596,7 @@ InstalledPlugins=XRVisualization
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent=
 PrimitiveComponent=
 None=======
@@ -1581,13 +1604,13 @@ None=======
 None=======
 SceneComponent=
 ActorComponent=
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[1].KeyType\" "
+DataAsset="\"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
-SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
-StreamableRenderAsset=
+SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
+StreamableRenderAsset="\"Object.SkeletalMesh.Materials.Materials[1]\" "
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base=
@@ -1595,21 +1618,21 @@ K2Node=
 EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode=
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
-FirstPersonCharacter_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Character="\"Object.Default.patrolPositions\" "
-Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Character="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Pawn="\"Object.Default.patrolPositions\" "
-Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Pawn="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Shelf_Blueprint_C="\"Object.Item\" "
 StaticMeshActor=
-etagere_Blueprint_C="\"Object.ItemPosition\" "
+etagere_Blueprint_C=
 Void_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 Non_Pickable_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 Pickable_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 EnemyAI_C="\"Object.Default.patrolPositions\" "
-EnemyAI_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
-SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
+EnemyAI_C="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CapsuleComponent=
 ShapeComponent=
 ShapeComponent=
@@ -1645,6 +1668,8 @@ UserWidget="\"Object.Layout.Slot\" "
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 CanvasPanel="\"Object.Layout.Slot\" "
+Enemy_AnimBP_C=
+AnimInstance=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1687,6 +1712,9 @@ None=======
 /Game/FirstPersonBP/UI/MainMenu/MainMenuGameMode.MainMenuGameMode=1
 /Game/FirstPersonBP/UI/GameOver/GameOverScreen.GameOverScreen=1
 /Game/Maps/GameOverScene.GameOverScene:PersistentLevel.GameOverScene=1
+/Game/AI/Anims/Cop_Character.Cop_Character=1
+/Game/AI/Anims/EnemyWalkBlend.EnemyWalkBlend=1
+/Game/AI/Anims/Enemy_AnimBP.Enemy_AnimBP=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1735,27 +1763,30 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Clock.Clock;
+RecentlyPlaced=/Game/Shelf/etagere_Blueprint.etagere_Blueprint;
+RecentlyPlaced=/Game/Shelf/etagere.etagere;
+RecentlyPlaced=/Game/AI/Anims/run_Anim.run_Anim;
+RecentlyPlaced=/Game/AI/Anims/run_slow_Anim.run_slow_Anim;
+RecentlyPlaced=/Game/AI/Anims/run_start_Anim.run_start_Anim;
+RecentlyPlaced=/Game/AI/Anims/walk_Anim.walk_Anim;
+RecentlyPlaced=/Game/AI/Anims/Cop_Character.Cop_Character;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Clock.Clock;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/PickableObject_2.PickableObject_2;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Shelf/Pickable_Item_Blueprint.Pickable_Item_Blueprint;
-RecentlyPlaced=/Game/Shelf/etagere.etagere;
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Shelf/Void_Item_Blueprint.Void_Item_Blueprint;
 RecentlyPlaced=/Game/Shelf/Non_Pickable_Item_Blueprint.Non_Pickable_Item_Blueprint;
 RecentlyPlaced=/Script/Engine.Pawn;/Engine/Transient.ActorFactoryPawn_0
 RecentlyPlaced=/Game/Animations/Walking_PhysicsAsset.Walking_PhysicsAsset;
 RecentlyPlaced=/Game/Animations/Walking.Walking;
-RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube_DM.1M_Cube_DM;
-RecentlyPlaced=/Game/Cart_Mat.Cart_Mat;
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/PickableObject.PickableObject;
 None=======
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [MaterialEditor]
 PrimType=1
@@ -1823,6 +1854,7 @@ DisplayActorsCount=False
 LevelAlreadyExistsInWorldWarning=False
 ChangeVariableType_Warning=False
 DeleteVariableInUse_Warning=False
+RemoveLevelWarning=False
 
 [RootWindow]
 ScreenPosition=X=296.000 Y=842.000
