--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,18 +127,18 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Maps/FirstPersonExampleMap
-MRUItem1=/Game/Maps/MainMenuLevel
-MRUItem2=/Game/Maps/GameScene
-MRUItem3=/Game/Maps/Game
-MRUItem4=/Game/Maps/RomainScene
-MRUItem5=/Game/Maps/GameOverScene
-MRUItem6=/Game/Maps/AI_Level
-MRUItem7=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem8=/Game/Maps/Maxence_Scene
-MRUItem9=/Game/Maps/AntoineScene
-MRUItem10=/Game/Maps/AntoineLVL
-MRUItem11=/Game/StarterContent/Maps/StarterMap
+MRUItem0=/Game/Maps/Main_Scene
+MRUItem1=/Game/Maps/RomainScene
+MRUItem2=/Game/Maps/FirstPersonExampleMap
+MRUItem3=/Game/Maps/MainMenuLevel
+MRUItem4=/Game/Maps/GameScene
+MRUItem5=/Game/Maps/Game
+MRUItem6=/Game/Maps/GameOverScene
+MRUItem7=/Game/Maps/AI_Level
+MRUItem8=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem9=/Game/Maps/Maxence_Scene
+MRUItem10=/Game/Maps/AntoineScene
+MRUItem11=/Game/Maps/AntoineLVL
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -288,6 +288,8 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 BP_Sky_Sphere_C=StaticMeshActor.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 Enemy_AnimBP_C=
 PickableObject_C=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
+BrushComponent=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
+PlayerStart=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
@@ -372,35 +374,33 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/FirstPersonExampleMap
+LastLevel=/Game/Maps/Main_Scene
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 CleanShutdown=False
-OpenAssetsAtExit=/Game/AI/Anims/EnemyWalkBlend.EnemyWalkBlend
-OpenAssetsAtExit=/Game/AI/Anims/Enemy_AnimBP.Enemy_AnimBP
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/FirstPersonExampleMap
-MRUItem1=/Game/Maps/MainMenuLevel
-MRUItem2=/Game/Maps/GameScene
-MRUItem3=/Game/Maps/Game
-MRUItem4=/Game/AI/Anims/Enemy_AnimBP
-MRUItem5=/Game/AI/Anims/EnemyWalkBlend
-MRUItem6=/Game/AI/Anims/idle_Anim
-MRUItem7=/Game/AI/EnemyAI
-MRUItem8=/Game/AI/Anims/Cop_Character
-MRUItem9=/Game/Maps/RomainScene
-MRUItem10=/Game/AI/Enemy_AnimBP
-MRUItem11=/Game/AI/Anims/walk_Anim
-MRUItem12=/Game/AI/BT_Enemy
-MRUItem13=/Game/AI/Anims/Cop_Character_Skeleton
-MRUItem14=/Game/Maps/GameOverScene
-MRUItem15=/Game/FirstPersonBP/Blueprints/Clock
-MRUItem16=/Game/FirstPersonBP/UI/GameOver/MainMenu_PC
-MRUItem17=/Game/FirstPersonBP/UI/MainMenu/MainMenuGameMode
-MRUItem18=/Game/FirstPersonBP/UI/MainMenu_PC
-MRUItem19=/Game/FirstPersonBP/UI/MainMenuGameMode
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/Maps/Main_Scene
+MRUItem2=/Game/Maps/RomainScene
+MRUItem3=/Game/Maps/FirstPersonExampleMap
+MRUItem4=/Game/Maps/MainMenuLevel
+MRUItem5=/Game/Maps/GameScene
+MRUItem6=/Game/Maps/Game
+MRUItem7=/Game/AI/Anims/Enemy_AnimBP
+MRUItem8=/Game/AI/Anims/EnemyWalkBlend
+MRUItem9=/Game/AI/Anims/idle_Anim
+MRUItem10=/Game/AI/EnemyAI
+MRUItem11=/Game/AI/Anims/Cop_Character
+MRUItem12=/Game/AI/Enemy_AnimBP
+MRUItem13=/Game/AI/Anims/walk_Anim
+MRUItem14=/Game/AI/BT_Enemy
+MRUItem15=/Game/AI/Anims/Cop_Character_Skeleton
+MRUItem16=/Game/Maps/GameOverScene
+MRUItem17=/Game/FirstPersonBP/Blueprints/Clock
+MRUItem18=/Game/FirstPersonBP/UI/GameOver/MainMenu_PC
+MRUItem19=/Game/FirstPersonBP/UI/MainMenu/MainMenuGameMode
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -1275,8 +1275,8 @@ None=======
 None=======
 None=======
 EnemyAI_C.TransformCommon=True
-EnemyAI_C.Animation=True
-EnemyAI_C.Mesh=True
+EnemyAI_C.Animation=False
+EnemyAI_C.Mesh=False
 EnemyAI_C.Clothing=True
 EnemyAI_C.Physics=True
 EnemyAI_C.MasterPoseComponent=True
@@ -1588,6 +1588,17 @@ SkeletalMesh.Sampling=True
 Enemy_AnimBP_C.RootMotion=True
 Enemy_AnimBP_C.Notifies=True
 Enemy_AnimBP_C.Default=True
+NavModifierVolume.TransformCommon=True
+NavModifierVolume.Default=True
+NavModifierVolume.Collision=True
+NavModifierVolume.Navigation=True
+NavModifierVolume.Tags=True
+NavModifierVolume.Cooking=True
+NavModifierVolume.BrushSettings=True
+NavModifierVolume.Replication=True
+NavModifierVolume.Actor=True
+PlayerStart.LOD=True
+PlayerStart.Cooking=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1620,9 +1631,9 @@ EdGraphNode=
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Character="\"Object.Default.patrolPositions\" "
-Character="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Pawn="\"Object.Default.patrolPositions\" "
-Pawn="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Shelf_Blueprint_C="\"Object.Item\" "
 StaticMeshActor=
 etagere_Blueprint_C=
@@ -1670,6 +1681,7 @@ Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Objec
 CanvasPanel="\"Object.Layout.Slot\" "
 Enemy_AnimBP_C=
 AnimInstance=
+NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1763,14 +1775,19 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/AI/EnemyAI.EnemyAI;
+RecentlyPlaced=/Script/NavigationSystem.NavModifierVolume;/Engine/Transient.ActorFactoryBoxVolume_1
 RecentlyPlaced=/Game/Shelf/etagere_Blueprint.etagere_Blueprint;
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
 RecentlyPlaced=/Game/Shelf/etagere.etagere;
 RecentlyPlaced=/Game/AI/Anims/run_Anim.run_Anim;
 RecentlyPlaced=/Game/AI/Anims/run_slow_Anim.run_slow_Anim;
 RecentlyPlaced=/Game/AI/Anims/run_start_Anim.run_start_Anim;
 RecentlyPlaced=/Game/AI/Anims/walk_Anim.walk_Anim;
 RecentlyPlaced=/Game/AI/Anims/Cop_Character.Cop_Character;
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Clock.Clock;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -1778,11 +1795,6 @@ RecentlyPlaced=/Game/FirstPersonBP/Blueprints/PickableObject_2.PickableObject_2;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Shelf/Pickable_Item_Blueprint.Pickable_Item_Blueprint;
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Shelf/Void_Item_Blueprint.Void_Item_Blueprint;
-RecentlyPlaced=/Game/Shelf/Non_Pickable_Item_Blueprint.Non_Pickable_Item_Blueprint;
-RecentlyPlaced=/Script/Engine.Pawn;/Engine/Transient.ActorFactoryPawn_0
-RecentlyPlaced=/Game/Animations/Walking_PhysicsAsset.Walking_PhysicsAsset;
-RecentlyPlaced=/Game/Animations/Walking.Walking;
 None=======
 
 [MessageLog]
