--- a/ChristmasJam21Team8/Saved/Config/Windows/Game.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/Game.ini
@@ -2,8 +2,32 @@
 bAddPacks=False
 
 [DebugWindows]
-ConsoleX=280
-ConsoleY=280
+ConsoleX=-32000
+ConsoleY=-32000
 ConsoleWidth=160
 ConsoleHeight=4000
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildTarget=
+StagingDirectory=(Path="C:/Users/romai/Desktop/TEST")
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+bUseIoStore=False
+bMakeBinaryConfig=False
+bGenerateNoChunks=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+HttpChunkInstallDataVersion=
+IncludeAppLocalPrerequisites=False
+bDeterministicShaderCodeOrder=False
+ApplocalPrerequisitesDirectory=(Path="")
+LocalizationTargetCatchAllChunkId=0
+bCookAll=False
+bCookMapsOnly=False
 
