--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,8 +127,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Maps/MainMenuLevel
-MRUItem1=/Game/Maps/FirstPersonExampleMap
+MRUItem0=/Game/Maps/FirstPersonExampleMap
+MRUItem1=/Game/Maps/MainMenuLevel
 MRUItem2=/Game/Maps/GameOverScene
 MRUItem3=/Game/Maps/RomainScene
 MRUItem4=/Game/Maps/AI_Level
@@ -269,11 +269,11 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacte
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 None=======
-etagere_Blueprint_C=
+etagere_Blueprint_C=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 Void_Item_Blueprint_C=Void_Item_Blueprint_C.Physics.ConstraintsGroup,Void_Item_Blueprint_C.Rendering.RayTracing,Void_Item_Blueprint_C.Rendering.LOD,
 Non_Pickable_Item_Blueprint_C=Non_Pickable_Item_Blueprint_C.Physics.ConstraintsGroup,Non_Pickable_Item_Blueprint_C.Rendering.RayTracing,Non_Pickable_Item_Blueprint_C.Rendering.LOD,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Rendering.TextureStreaming,
-SceneComponent=StaticMeshActor.Collision.Collision,
+SceneComponent=
 PickableObject_2_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 EnemyAI_C=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 BTT_ChangeMoveSpeed_C=
@@ -285,6 +285,8 @@ Clock_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Renderi
 GameOverScreen_C=
 MainMenu_C=
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+ChildActorComponent=
+FirstPersonHUD_C=StaticMeshActor.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
@@ -369,33 +371,34 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/MainMenuLevel
+LastLevel=/Game/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Shelf/etagere_Blueprint.etagere_Blueprint
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/MainMenuLevel
-MRUItem1=/Game/FirstPersonBP/Blueprints/Clock
-MRUItem2=/Game/Maps/FirstPersonExampleMap
-MRUItem3=/Game/FirstPersonBP/UI/GameOver/MainMenu_PC
-MRUItem4=/Game/Maps/GameOverScene
-MRUItem5=/Game/FirstPersonBP/UI/MainMenu/MainMenuGameMode
-MRUItem6=/Game/FirstPersonBP/UI/MainMenu_PC
-MRUItem7=/Game/FirstPersonBP/UI/MainMenuGameMode
-MRUItem8=/Game/FirstPersonBP/UI/MainMenu
-MRUItem9=/Game/FirstPersonBP/GameOverScreen
-MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem11=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/3ColorBlend
-MRUItem12=/Game/Materials/Clock
-MRUItem13=/Game/FirstPersonBP/Blueprints/PickableObject_2
-MRUItem14=/Game/FirstPersonBP/Blueprints/TriggerBox_Blueprint
-MRUItem15=/Game/Maps/Maxence_Scene
-MRUItem16=/Game/Shelf/Void_Item_Blueprint
-MRUItem17=/Game/Shelf/Non_Pickable_Item_Blueprint
-MRUItem18=/Game/Shelf/Pickable_Item_Blueprint
-MRUItem19=/Game/Shelf/05_-_Default
+MRUItem0=/Game/Shelf/etagere_Blueprint
+MRUItem1=/Game/Maps/FirstPersonExampleMap
+MRUItem2=/Game/Maps/MainMenuLevel
+MRUItem3=/Game/FirstPersonBP/Blueprints/Clock
+MRUItem4=/Game/FirstPersonBP/UI/GameOver/MainMenu_PC
+MRUItem5=/Game/Maps/GameOverScene
+MRUItem6=/Game/FirstPersonBP/UI/MainMenu/MainMenuGameMode
+MRUItem7=/Game/FirstPersonBP/UI/MainMenu_PC
+MRUItem8=/Game/FirstPersonBP/UI/MainMenuGameMode
+MRUItem9=/Game/FirstPersonBP/UI/MainMenu
+MRUItem10=/Game/FirstPersonBP/GameOverScreen
+MRUItem11=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem12=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/3ColorBlend
+MRUItem13=/Game/Materials/Clock
+MRUItem14=/Game/FirstPersonBP/Blueprints/PickableObject_2
+MRUItem15=/Game/FirstPersonBP/Blueprints/TriggerBox_Blueprint
+MRUItem16=/Game/Maps/Maxence_Scene
+MRUItem17=/Game/Shelf/Void_Item_Blueprint
+MRUItem18=/Game/Shelf/Non_Pickable_Item_Blueprint
+MRUItem19=/Game/Shelf/Pickable_Item_Blueprint
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -1565,6 +1568,9 @@ GameOverScene_C.Tick=True
 GameOverScene_C.Replication=True
 GameOverScene_C.Actor=True
 GameOverScene_C.Input=True
+FirstPersonHUD_C.TransformCommon=True
+FirstPersonHUD_C.HUD=True
+FirstPersonHUD_C.Collision=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1581,7 +1587,7 @@ None=======
 None=======
 SceneComponent=
 ActorComponent=
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[1].KeyType\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1601,8 +1607,8 @@ Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps
 Pawn="\"Object.Default.patrolPositions\" "
 Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Shelf_Blueprint_C="\"Object.Item\" "
-StaticMeshActor=
-etagere_Blueprint_C="\"Object.ItemPosition\" "
+StaticMeshActor="\"Object.Default.Item_position\" "
+etagere_Blueprint_C="\"Object.Default.Item_position\" "
 Void_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 Non_Pickable_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 Pickable_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
