--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -143,7 +143,6 @@ MRUItem11=/Game/Maps/AntoineLVL
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -288,8 +287,12 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 BP_Sky_Sphere_C=StaticMeshActor.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 Enemy_AnimBP_C=
 PickableObject_C=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
-BrushComponent=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
+BrushComponent=
 PlayerStart=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
+Brush=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
+NavModifierVolume=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
+MaterialInstanceConstant=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
@@ -381,26 +384,26 @@ CleanShutdown=True
 CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem1=/Game/Maps/Main_Scene
-MRUItem2=/Game/Maps/RomainScene
-MRUItem3=/Game/Maps/FirstPersonExampleMap
-MRUItem4=/Game/Maps/MainMenuLevel
-MRUItem5=/Game/Maps/GameScene
-MRUItem6=/Game/Maps/Game
-MRUItem7=/Game/AI/Anims/Enemy_AnimBP
-MRUItem8=/Game/AI/Anims/EnemyWalkBlend
-MRUItem9=/Game/AI/Anims/idle_Anim
-MRUItem10=/Game/AI/EnemyAI
-MRUItem11=/Game/AI/Anims/Cop_Character
-MRUItem12=/Game/AI/Enemy_AnimBP
-MRUItem13=/Game/AI/Anims/walk_Anim
-MRUItem14=/Game/AI/BT_Enemy
-MRUItem15=/Game/AI/Anims/Cop_Character_Skeleton
-MRUItem16=/Game/Maps/GameOverScene
-MRUItem17=/Game/FirstPersonBP/Blueprints/Clock
-MRUItem18=/Game/FirstPersonBP/UI/GameOver/MainMenu_PC
-MRUItem19=/Game/FirstPersonBP/UI/MainMenu/MainMenuGameMode
+MRUItem0=/Game/Mesh/MeshtoUE4/floor
+MRUItem1=/Game/Mesh/Materials/Wall
+MRUItem2=/Game/Mesh/Materials/Floor
+MRUItem3=/Game/Mesh/Materials/PresentPink
+MRUItem4=/Game/Mesh/Materials/PresentBlue
+MRUItem5=/Game/Mesh/Materials/present
+MRUItem6=/Game/Mesh/Materials/Face
+MRUItem7=/Game/Mesh/Materials/Pauliam
+MRUItem8=/Game/Mesh/Materials/Daddy
+MRUItem9=/Game/Mesh/Materials/Cercamon
+MRUItem10=/Game/Mesh/Materials/Bebou
+MRUItem11=/Game/Mesh/Materials/MatCharacter
+MRUItem12=/Game/Mesh/TexturestoUE4/present/var1/present_Material_OcclusionRoughnessMetallic
+MRUItem13=/Game/Mesh/TexturestoUE4/Floor/floor_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem14=/Game/Mesh/TexturestoUE4/cap_n_face/thomas_remi/cap_face_name_Face_OcclusionRoughnessMetallic
+MRUItem15=/Game/Mesh/TexturestoUE4/cap_n_face/thomas_remi/cap_face_name_cap_OcclusionRoughnessMetallic
+MRUItem16=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem17=/Game/Maps/Main_Scene
+MRUItem18=/Game/Maps/RomainScene
+MRUItem19=/Game/Maps/FirstPersonExampleMap
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -1599,6 +1602,18 @@ NavModifierVolume.Replication=True
 NavModifierVolume.Actor=True
 PlayerStart.LOD=True
 PlayerStart.Cooking=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1621,7 +1636,7 @@ DataAsset="\"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
 SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
-StreamableRenderAsset="\"Object.SkeletalMesh.Materials.Materials[1]\" "
+StreamableRenderAsset=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base=
@@ -1631,9 +1646,9 @@ EdGraphNode=
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Character="\"Object.Default.patrolPositions\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Pawn="\"Object.Default.patrolPositions\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Shelf_Blueprint_C="\"Object.Item\" "
 StaticMeshActor=
 etagere_Blueprint_C=
@@ -1664,9 +1679,9 @@ SphereComponent="\"Object.Collision.BodyInstance\" "
 PickableObject_2_C=
 Clock_C=
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PreviewMaterial="\"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" "
-Material="\"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" "
-MaterialInterface="\"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" "
+PreviewMaterial=
+Material=
+MaterialInterface=
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
@@ -1727,6 +1742,22 @@ None=======
 /Game/AI/Anims/Cop_Character.Cop_Character=1
 /Game/AI/Anims/EnemyWalkBlend.EnemyWalkBlend=1
 /Game/AI/Anims/Enemy_AnimBP.Enemy_AnimBP=1
+/Game/Mesh/TexturestoUE4/cap_n_face/thomas_remi/cap_face_name_cap_OcclusionRoughnessMetallic.cap_face_name_cap_OcclusionRoughnessMetallic=1
+/Game/Mesh/TexturestoUE4/cap_n_face/thomas_remi/cap_face_name_Face_OcclusionRoughnessMetallic.cap_face_name_Face_OcclusionRoughnessMetallic=1
+/Game/Mesh/TexturestoUE4/Floor/floor_DefaultMaterial_OcclusionRoughnessMetallic.floor_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Mesh/TexturestoUE4/present/var1/present_Material_OcclusionRoughnessMetallic.present_Material_OcclusionRoughnessMetallic=1
+/Game/Mesh/Materials/Daddy.Daddy=1
+/Game/Mesh/Materials/Cercamon.Cercamon=1
+/Game/Mesh/Materials/Pauliam.Pauliam=1
+/Game/Mesh/Materials/Bebou.Bebou=1
+/Game/Mesh/Materials/MatCharacter.MatCharacter=1
+/Game/Mesh/Materials/Face.Face=1
+/Game/Mesh/Materials/present.present=1
+/Game/Mesh/Materials/PresentBlue.PresentBlue=1
+/Game/Mesh/Materials/PresentPink.PresentPink=1
+/Game/Mesh/Materials/Floor.Floor=1
+/Game/Mesh/Materials/Wall.Wall=1
+/Game/Mesh/MeshtoUE4/floor.floor=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1775,6 +1806,8 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/Mesh/MeshtoUE4/floor.floor;
+RecentlyPlaced=/Game/Mesh/MeshtoUE4/wall.wall;
 RecentlyPlaced=/Game/AI/EnemyAI.EnemyAI;
 RecentlyPlaced=/Script/NavigationSystem.NavModifierVolume;/Engine/Transient.ActorFactoryBoxVolume_1
 RecentlyPlaced=/Game/Shelf/etagere_Blueprint.etagere_Blueprint;
@@ -1793,8 +1826,6 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/PickableObject_2.PickableObject_2;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Shelf/Pickable_Item_Blueprint.Pickable_Item_Blueprint;
-RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 None=======
 
 [MessageLog]
@@ -1890,6 +1921,8 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 DestructibleMesh.Damage=True
 SphereComponent.Collision=False
 Border.Appearance=False
+FbxImportUI.Material=True
+FbxImportUI.Miscellaneous=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1906,8 +1939,8 @@ LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
 bImportAnimations=True
-bImportMaterials=True
-bImportTextures=True
+bImportMaterials=False
+bImportTextures=False
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1985,7 +2018,7 @@ bConvertSceneUnit=False
 
 [FBX_Import_UI_Option_FbxTextureImportData]
 bInvertNormalMaps=False
-MaterialSearchLocation=Local
+MaterialSearchLocation=DoNotSearch
 BaseMaterialName=None
 BaseColorName=
 BaseDiffuseTextureName=
@@ -3002,4 +3035,9 @@ TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 MovieRendererName=
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
 
