New scene Silouane Quentin

--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,18 +127,18 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Maps/Main_Scene
-MRUItem1=/Game/Maps/RomainScene
-MRUItem2=/Game/Maps/FirstPersonExampleMap
-MRUItem3=/Game/Maps/MainMenuLevel
-MRUItem4=/Game/Maps/GameScene
-MRUItem5=/Game/Maps/Game
-MRUItem6=/Game/Maps/GameOverScene
-MRUItem7=/Game/Maps/AI_Level
-MRUItem8=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem9=/Game/Maps/Maxence_Scene
-MRUItem10=/Game/Maps/AntoineScene
-MRUItem11=/Game/Maps/AntoineLVL
+MRUItem0=/Game/Maps/Silouane_Quentin_Scene
+MRUItem1=/Game/Maps/Main_Scene
+MRUItem2=/Game/Maps/AntoineScene
+MRUItem3=/Game/Maps/RomainScene
+MRUItem4=/Game/Maps/FirstPersonExampleMap
+MRUItem5=/Game/Maps/MainMenuLevel
+MRUItem6=/Game/Maps/GameScene
+MRUItem7=/Game/Maps/Game
+MRUItem8=/Game/Maps/GameOverScene
+MRUItem9=/Game/Maps/AI_Level
+MRUItem10=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem11=/Game/Maps/Maxence_Scene
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -377,33 +377,35 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main_Scene
+LastLevel=/Game/Maps/Silouane_Quentin_Scene
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/AI/EnemyAI.EnemyAI
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Mesh/MeshtoUE4/floor
-MRUItem1=/Game/Mesh/Materials/Wall
-MRUItem2=/Game/Mesh/Materials/Floor
-MRUItem3=/Game/Mesh/Materials/PresentPink
-MRUItem4=/Game/Mesh/Materials/PresentBlue
-MRUItem5=/Game/Mesh/Materials/present
-MRUItem6=/Game/Mesh/Materials/Face
-MRUItem7=/Game/Mesh/Materials/Pauliam
-MRUItem8=/Game/Mesh/Materials/Daddy
-MRUItem9=/Game/Mesh/Materials/Cercamon
-MRUItem10=/Game/Mesh/Materials/Bebou
-MRUItem11=/Game/Mesh/Materials/MatCharacter
-MRUItem12=/Game/Mesh/TexturestoUE4/present/var1/present_Material_OcclusionRoughnessMetallic
-MRUItem13=/Game/Mesh/TexturestoUE4/Floor/floor_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem14=/Game/Mesh/TexturestoUE4/cap_n_face/thomas_remi/cap_face_name_Face_OcclusionRoughnessMetallic
-MRUItem15=/Game/Mesh/TexturestoUE4/cap_n_face/thomas_remi/cap_face_name_cap_OcclusionRoughnessMetallic
-MRUItem16=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem17=/Game/Maps/Main_Scene
-MRUItem18=/Game/Maps/RomainScene
-MRUItem19=/Game/Maps/FirstPersonExampleMap
+MRUItem0=/Game/AI/EnemyAI
+MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem2=/Game/Maps/Silouane_Quentin_Scene
+MRUItem3=/Game/Maps/Main_Scene
+MRUItem4=/Game/Maps/AntoineScene
+MRUItem5=/Game/Mesh/MeshtoUE4/floor
+MRUItem6=/Game/Mesh/Materials/Wall
+MRUItem7=/Game/Mesh/Materials/Floor
+MRUItem8=/Game/Mesh/Materials/PresentPink
+MRUItem9=/Game/Mesh/Materials/PresentBlue
+MRUItem10=/Game/Mesh/Materials/present
+MRUItem11=/Game/Mesh/Materials/Face
+MRUItem12=/Game/Mesh/Materials/Pauliam
+MRUItem13=/Game/Mesh/Materials/Daddy
+MRUItem14=/Game/Mesh/Materials/Cercamon
+MRUItem15=/Game/Mesh/Materials/Bebou
+MRUItem16=/Game/Mesh/Materials/MatCharacter
+MRUItem17=/Game/Mesh/TexturestoUE4/present/var1/present_Material_OcclusionRoughnessMetallic
+MRUItem18=/Game/Mesh/TexturestoUE4/Floor/floor_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem19=/Game/Mesh/TexturestoUE4/cap_n_face/thomas_remi/cap_face_name_Face_OcclusionRoughnessMetallic
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -1829,7 +1831,7 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 None=======
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [MaterialEditor]
 PrimType=1
