--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,12 +127,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Maps/Silouane_Quentin_Scene
-MRUItem1=/Game/Maps/Main_Scene
-MRUItem2=/Game/Maps/AntoineScene
-MRUItem3=/Game/Maps/RomainScene
-MRUItem4=/Game/Maps/FirstPersonExampleMap
-MRUItem5=/Game/Maps/MainMenuLevel
+MRUItem0=/Game/Maps/Main_Scene
+MRUItem1=/Game/Maps/MainMenuLevel
+MRUItem2=/Game/Maps/Silouane_Quentin_Scene
+MRUItem3=/Game/Maps/AntoineScene
+MRUItem4=/Game/Maps/RomainScene
+MRUItem5=/Game/Maps/FirstPersonExampleMap
 MRUItem6=/Game/Maps/GameScene
 MRUItem7=/Game/Maps/Game
 MRUItem8=/Game/Maps/GameOverScene
@@ -258,7 +258,7 @@ BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FirstPersonCharacter_C=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
 FirstPersonCharacter_C=StaticMeshActor.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
 CapsuleComponent=
-CapsuleComponent=
+CapsuleComponent=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 Shelf_Blueprint_C=
@@ -293,6 +293,7 @@ Brush=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGro
 NavModifierVolume=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 MaterialInstanceConstant=
+NavMeshBoundsVolume=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
@@ -377,35 +378,33 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Silouane_Quentin_Scene
+LastLevel=/Game/Maps/Main_Scene
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
-OpenAssetsAtExit=/Game/AI/EnemyAI.EnemyAI
+CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AI/EnemyAI
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/Maps/Silouane_Quentin_Scene
-MRUItem3=/Game/Maps/Main_Scene
-MRUItem4=/Game/Maps/AntoineScene
-MRUItem5=/Game/Mesh/MeshtoUE4/floor
-MRUItem6=/Game/Mesh/Materials/Wall
-MRUItem7=/Game/Mesh/Materials/Floor
-MRUItem8=/Game/Mesh/Materials/PresentPink
-MRUItem9=/Game/Mesh/Materials/PresentBlue
-MRUItem10=/Game/Mesh/Materials/present
-MRUItem11=/Game/Mesh/Materials/Face
-MRUItem12=/Game/Mesh/Materials/Pauliam
-MRUItem13=/Game/Mesh/Materials/Daddy
-MRUItem14=/Game/Mesh/Materials/Cercamon
-MRUItem15=/Game/Mesh/Materials/Bebou
-MRUItem16=/Game/Mesh/Materials/MatCharacter
-MRUItem17=/Game/Mesh/TexturestoUE4/present/var1/present_Material_OcclusionRoughnessMetallic
-MRUItem18=/Game/Mesh/TexturestoUE4/Floor/floor_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem19=/Game/Mesh/TexturestoUE4/cap_n_face/thomas_remi/cap_face_name_Face_OcclusionRoughnessMetallic
+MRUItem0=/Game/Mesh/MeshtoUE4/present_3
+MRUItem1=/Game/Mesh/MeshtoUE4/present_2
+MRUItem2=/Game/Mesh/MeshtoUE4/present
+MRUItem3=/Game/Mesh/MeshtoUE4/wall
+MRUItem4=/Game/Maps/Main_Scene
+MRUItem5=/Game/Maps/MainMenuLevel
+MRUItem6=/Game/AI/EnemyAI
+MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem8=/Game/Maps/Silouane_Quentin_Scene
+MRUItem9=/Game/Maps/AntoineScene
+MRUItem10=/Game/Mesh/MeshtoUE4/floor
+MRUItem11=/Game/Mesh/Materials/Wall
+MRUItem12=/Game/Mesh/Materials/Floor
+MRUItem13=/Game/Mesh/Materials/PresentPink
+MRUItem14=/Game/Mesh/Materials/PresentBlue
+MRUItem15=/Game/Mesh/Materials/present
+MRUItem16=/Game/Mesh/Materials/Face
+MRUItem17=/Game/Mesh/Materials/Pauliam
+MRUItem18=/Game/Mesh/Materials/Daddy
+MRUItem19=/Game/Mesh/Materials/Cercamon
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -1760,6 +1759,10 @@ None=======
 /Game/Mesh/Materials/Floor.Floor=1
 /Game/Mesh/Materials/Wall.Wall=1
 /Game/Mesh/MeshtoUE4/floor.floor=1
+/Game/Mesh/MeshtoUE4/wall.wall=1
+/Game/Mesh/MeshtoUE4/present.present=1
+/Game/Mesh/MeshtoUE4/present_2.present_2=1
+/Game/Mesh/MeshtoUE4/present_3.present_3=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1808,8 +1811,9 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
-RecentlyPlaced=/Game/Mesh/MeshtoUE4/floor.floor;
+RecentlyPlaced=/Game/Mesh/MeshtoUE4/present.present;
 RecentlyPlaced=/Game/Mesh/MeshtoUE4/wall.wall;
+RecentlyPlaced=/Game/Mesh/MeshtoUE4/floor.floor;
 RecentlyPlaced=/Game/AI/EnemyAI.EnemyAI;
 RecentlyPlaced=/Script/NavigationSystem.NavModifierVolume;/Engine/Transient.ActorFactoryBoxVolume_1
 RecentlyPlaced=/Game/Shelf/etagere_Blueprint.etagere_Blueprint;
@@ -1827,7 +1831,6 @@ RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Clock.Clock;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/PickableObject_2.PickableObject_2;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 None=======
 
 [MessageLog]
