Fix Pick Up + set scene order for build + few fixes

--- a/ChristmasJam21Team8/Config/DefaultGame.ini
+++ b/ChristmasJam21Team8/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=8366F80B419104B3904852A09F18C9D0
-ProjectName=First Person BP Game Template
+ProjectName=Christmas Robbery
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "881DFCC64CC69C1EC12C60836CA70FDB", "Christmas Robbery")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
