--- a/ChristmasJam21Team8/Saved/Config/Windows/Game.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/Game.ini
@@ -10,7 +10,7 @@ ConsoleHeight=4000
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildTarget=
-StagingDirectory=(Path="C:/Users/romai/Desktop/TEST")
+StagingDirectory=(Path="D:/Documents/IIM/A2/Jam/ChristmasJam/Builds/TestBuild")
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
