--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -258,7 +258,7 @@ BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FirstPersonCharacter_C=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
 FirstPersonCharacter_C=StaticMeshActor.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
 CapsuleComponent=
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
+CapsuleComponent=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 Shelf_Blueprint_C=
@@ -383,28 +383,31 @@ LastLevel=/Game/Maps/Main_Scene
 [AssetEditorSubsystem]
 CleanShutdown=True
 CleanShutdown=True
+OpenAssetsAtExit=/Game/AI/BT_Enemy.BT_Enemy
+OpenAssetsAtExit=/Game/AI/BB_Enemy.BB_Enemy
+OpenAssetsAtExit=/Game/Mesh/MeshtoUE4/wall.wall
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Mesh/MeshtoUE4/present_3
-MRUItem1=/Game/Mesh/MeshtoUE4/present_2
-MRUItem2=/Game/Mesh/MeshtoUE4/present
-MRUItem3=/Game/Mesh/MeshtoUE4/wall
-MRUItem4=/Game/Maps/Main_Scene
-MRUItem5=/Game/Maps/MainMenuLevel
-MRUItem6=/Game/AI/EnemyAI
-MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem8=/Game/Maps/Silouane_Quentin_Scene
-MRUItem9=/Game/Maps/AntoineScene
-MRUItem10=/Game/Mesh/MeshtoUE4/floor
-MRUItem11=/Game/Mesh/Materials/Wall
-MRUItem12=/Game/Mesh/Materials/Floor
-MRUItem13=/Game/Mesh/Materials/PresentPink
-MRUItem14=/Game/Mesh/Materials/PresentBlue
-MRUItem15=/Game/Mesh/Materials/present
-MRUItem16=/Game/Mesh/Materials/Face
-MRUItem17=/Game/Mesh/Materials/Pauliam
-MRUItem18=/Game/Mesh/Materials/Daddy
-MRUItem19=/Game/Mesh/Materials/Cercamon
+MRUItem0=/Game/Mesh/MeshtoUE4/wall
+MRUItem1=/Game/AI/BT_Enemy
+MRUItem2=/Game/AI/EnemyAI
+MRUItem3=/Game/Maps/Main_Scene
+MRUItem4=/Game/Maps/MainMenuLevel
+MRUItem5=/Game/Mesh/MeshtoUE4/present_3
+MRUItem6=/Game/Mesh/MeshtoUE4/present_2
+MRUItem7=/Game/Mesh/MeshtoUE4/present
+MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem9=/Game/Maps/Silouane_Quentin_Scene
+MRUItem10=/Game/Maps/AntoineScene
+MRUItem11=/Game/Mesh/MeshtoUE4/floor
+MRUItem12=/Game/Mesh/Materials/Wall
+MRUItem13=/Game/Mesh/Materials/Floor
+MRUItem14=/Game/Mesh/Materials/PresentPink
+MRUItem15=/Game/Mesh/Materials/PresentBlue
+MRUItem16=/Game/Mesh/Materials/present
+MRUItem17=/Game/Mesh/Materials/Face
+MRUItem18=/Game/Mesh/Materials/Pauliam
+MRUItem19=/Game/Mesh/Materials/Daddy
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -1615,6 +1618,8 @@ MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+CharacterMovementComponent.AssetUserData=True
+CharacterMovementComponent.Collision=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1637,13 +1642,13 @@ DataAsset="\"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
 SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
-StreamableRenderAsset=
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base=
 K2Node=
 EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode=
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Character="\"Object.Default.patrolPositions\" "
@@ -1698,6 +1703,11 @@ CanvasPanel="\"Object.Layout.Slot\" "
 Enemy_AnimBP_C=
 AnimInstance=
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object.NavMovement.NavAgentProps\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1928,6 +1938,7 @@ SphereComponent.Collision=False
 Border.Appearance=False
 FbxImportUI.Material=True
 FbxImportUI.Miscellaneous=True
+CharacterMovementComponent.Character Movement (General Settings)=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
