Setup speed IA and Perso

--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -256,9 +256,9 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ax
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument1,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FirstPersonCharacter_C=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
-FirstPersonCharacter_C=StaticMeshActor.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
+FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 CapsuleComponent=
-CapsuleComponent=
+CapsuleComponent=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 Shelf_Blueprint_C=
@@ -277,7 +277,7 @@ PickableObject_2_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 EnemyAI_C=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 BTT_ChangeMoveSpeed_C=
 Character=PropertyWrapper.DefaultValueCategory.None,
-CharacterMovementComponent=
+CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 BTT_GetNextPatrolPoint_C=
 BTT_ResetLostSight_C=
 Clock_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Rendering.TextureStreaming,
@@ -382,30 +382,32 @@ LastLevel=/Game/Maps/Silouane_Quentin_Scene
 [AssetEditorSubsystem]
 CleanShutdown=True
 CleanShutdown=False
+OpenAssetsAtExit=/Game/AI/BB_Enemy.BB_Enemy
+OpenAssetsAtExit=/Game/AI/BT_Enemy.BT_Enemy
+OpenAssetsAtExit=/Game/AI/BTT_ChangeMoveSpeed.BTT_ChangeMoveSpeed
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
-OpenAssetsAtExit=/Game/AI/EnemyAI.EnemyAI
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AI/EnemyAI
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/Maps/Silouane_Quentin_Scene
-MRUItem3=/Game/Maps/Main_Scene
-MRUItem4=/Game/Maps/AntoineScene
-MRUItem5=/Game/Mesh/MeshtoUE4/floor
-MRUItem6=/Game/Mesh/Materials/Wall
-MRUItem7=/Game/Mesh/Materials/Floor
-MRUItem8=/Game/Mesh/Materials/PresentPink
-MRUItem9=/Game/Mesh/Materials/PresentBlue
-MRUItem10=/Game/Mesh/Materials/present
-MRUItem11=/Game/Mesh/Materials/Face
-MRUItem12=/Game/Mesh/Materials/Pauliam
-MRUItem13=/Game/Mesh/Materials/Daddy
-MRUItem14=/Game/Mesh/Materials/Cercamon
-MRUItem15=/Game/Mesh/Materials/Bebou
-MRUItem16=/Game/Mesh/Materials/MatCharacter
-MRUItem17=/Game/Mesh/TexturestoUE4/present/var1/present_Material_OcclusionRoughnessMetallic
-MRUItem18=/Game/Mesh/TexturestoUE4/Floor/floor_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem19=/Game/Mesh/TexturestoUE4/cap_n_face/thomas_remi/cap_face_name_Face_OcclusionRoughnessMetallic
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/AI/BTT_ChangeMoveSpeed
+MRUItem2=/Game/AI/BT_Enemy
+MRUItem3=/Game/AI/Controller_Enemy
+MRUItem4=/Game/AI/EnemyAI
+MRUItem5=/Game/Maps/Silouane_Quentin_Scene
+MRUItem6=/Game/Maps/Main_Scene
+MRUItem7=/Game/Maps/AntoineScene
+MRUItem8=/Game/Mesh/MeshtoUE4/floor
+MRUItem9=/Game/Mesh/Materials/Wall
+MRUItem10=/Game/Mesh/Materials/Floor
+MRUItem11=/Game/Mesh/Materials/PresentPink
+MRUItem12=/Game/Mesh/Materials/PresentBlue
+MRUItem13=/Game/Mesh/Materials/present
+MRUItem14=/Game/Mesh/Materials/Face
+MRUItem15=/Game/Mesh/Materials/Pauliam
+MRUItem16=/Game/Mesh/Materials/Daddy
+MRUItem17=/Game/Mesh/Materials/Cercamon
+MRUItem18=/Game/Mesh/Materials/Bebou
+MRUItem19=/Game/Mesh/Materials/MatCharacter
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -903,7 +905,7 @@ CharacterMovementComponent.Variable=True
 CharacterMovementComponent.Sockets=True
 CharacterMovementComponent.Character Movement (General Settings)=True
 CharacterMovementComponent.Character Movement: Walking=True
-CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=False
 CharacterMovementComponent.ComponentTick=True
 CharacterMovementComponent.Character Movement (Networking)=True
 CharacterMovementComponent.Character Movement: Swimming=True
@@ -1616,6 +1618,8 @@ MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+CharacterMovementComponent.AssetUserData=True
+CharacterMovementComponent.Collision=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1644,9 +1648,9 @@ AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settin
 AnimGraphNode_Base=
 K2Node=
 EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode=
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
-FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+FirstPersonCharacter_C=
 Character="\"Object.Default.patrolPositions\" "
 Character="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Pawn="\"Object.Default.patrolPositions\" "
@@ -1699,6 +1703,10 @@ CanvasPanel="\"Object.Layout.Slot\" "
 Enemy_AnimBP_C=
 AnimInstance=
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+CharacterMovementComponent=
+PawnMovementComponent=
+NavMovementComponent=
+MovementComponent=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1808,9 +1816,9 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/AI/EnemyAI.EnemyAI;
 RecentlyPlaced=/Game/Mesh/MeshtoUE4/floor.floor;
 RecentlyPlaced=/Game/Mesh/MeshtoUE4/wall.wall;
-RecentlyPlaced=/Game/AI/EnemyAI.EnemyAI;
 RecentlyPlaced=/Script/NavigationSystem.NavModifierVolume;/Engine/Transient.ActorFactoryBoxVolume_1
 RecentlyPlaced=/Game/Shelf/etagere_Blueprint.etagere_Blueprint;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -1831,7 +1839,7 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 None=======
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [MaterialEditor]
 PrimType=1
@@ -1925,6 +1933,7 @@ SphereComponent.Collision=False
 Border.Appearance=False
 FbxImportUI.Material=True
 FbxImportUI.Miscellaneous=True
+CharacterMovementComponent.Character Movement (General Settings)=False
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
